--- a/README
+++ b/README
@@ -2,6 +2,14 @@ GStreamer test program for testing elements.
 
 Will take source video from the videotestsrc or from a video file, run it through elements of you choice, including overlays etc. and then output video to the screen in a standalone window via autovideosink.
 
+Build:
+	$ ./autogen
+	$ make
+
+Run:
+	$ cd src
+	$ ./gst-app
+
 
 
 Legacy readme:
